--- a/Presentation/Web/ClientApp/app/challenge/new-challenge/new-challenge.component.html
+++ b/Presentation/Web/ClientApp/app/challenge/new-challenge/new-challenge.component.html
@@ -1,28 +1,44 @@
-<div class="mdl-grid mdl-cell--12-col mdl-padded">
+<div class="mdl-grid mdl-cell--8-col">
     <div class="mdl-cell mdl-cell--12-col">
         <h3>New Challenge</h3>
     </div>
     <form class="mdl-cell mdl-cell--12-col" [formGroup]="challengeForm" (ngSubmit)="submit()">
-        <p>
-            <mdl-textfield-validated [formControl]="challengeForm.get('title')"
+        <p class="mdl-cell mdl-cell--12-col">
+            <mdl-textfield-validated class="mdl-cell mdl-cell--8-col" [formControl]="challengeForm.get('title')"
                                      label="Title"
                                      type="text"
                                      floating-label></mdl-textfield-validated>
+            <mdl-switch class="mdl-cell mdl-cell--3-col" formControlName="codeAnswered" mdl-ripple>Code Answered</mdl-switch>
         </p>
-        <p>
-            <mdl-textfield-validated [formControl]="challengeForm.get('section')"
-                                     label="{{ 'Auth.Email' | translate:lang }}"
-                                     type="text"
-                                     floating-label></mdl-textfield-validated>
-            <mdl-textfield-validated [formControl]="challengeForm.get('password')"
-                                     label="{{ 'Auth.Password' | translate:lang }}"
-                                     type="password"
-                                     floating-label></mdl-textfield-validated>
-            <mdl-textfield-validated [formControl]="challengeForm.get('confirmPassword')"
-                                     label="{{ 'Auth.PasswordConfirmation' | translate:lang }}"
-                                     type="password"
-                                     floating-label></mdl-textfield-validated>
+        <p class="mdl-cell mdl-cell--12-col">
+            <mdl-select class="mdl-cell mdl-cell--4-col" #sectionSelect floating-label formControlName="section" placeholder="Section">
+                <mdl-option *ngFor="let section of sections" [value]="section.value">{{section.name}}</mdl-option>
+            </mdl-select>
+            <mdl-select class="mdl-cell mdl-cell--4-col" floating-label formControlName="difficulty" placeholder="Difficulty">
+                <mdl-option *ngFor="let difficulty of difficulties" [value]="difficulty.value">{{difficulty.name}}</mdl-option>
+            </mdl-select>
+            <mdl-select class="mdl-cell mdl-cell--4-col" floating-label formControlName="language" placeholder="Language">
+                <mdl-option *ngFor="let language of languages" [value]="language.value">{{language.name}}</mdl-option>
+            </mdl-select>
         </p>
+        <textarea #previewEditor></textarea>
+        <textarea class="hidden" #conditionEditor></textarea>
+        <div [hidden]="challengeForm.get('codeAnswered').value">
+            <label class="mdl-cell mdl-cell--12-col">Answers</label>
+            <mdl-textfield class="mdl-cell mdl-cell--12-col"
+                           *ngFor="let index of [1,2,3,4,5]"
+                           label="Answer {{index}}"
+                           type="text"
+                           floating-label></mdl-textfield>
+        </div>
+        <div [hidden]="!challengeForm.get('codeAnswered').value">
+            <label class="mdl-cell mdl-cell--12-col">Answer</label>
+            <ace-editor style="height:500px" [(text)]="answer"></ace-editor>
+        </div>
+
+        <label class="mdl-cell mdl-cell--12-col">Tags</label>
+        <mdl-textfield class="mdl-cell mdl-cell--12-col"></mdl-textfield>
+
         <div class="mdl-cell mdl-cell--12-col">
             <button [routerLink]="['/challenges']" mdl-button mdl-button-type="raised" mdl-ripple>
                 <mdl-icon>keyboard_arrow_left</mdl-icon>
