--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -17,7 +17,8 @@
         challenges: {
             searchChallenges: '@Url.Action("Search", "Challenges")',
             getChallenge: '@Url.Action("GetChallenge", "Challenges")',
-            solve: '@Url.Action("Solve", "Challenges")'
+            solve: '@Url.Action("Solve", "Challenges")',
+            getSourceCodeTemplate: '@Url.Action("GetSourceCodeTemplate", "Challenges")'
         }
     }
 
