--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -19,6 +19,9 @@
             getChallenge: '@Url.Action("GetChallenge", "Challenges")',
             solve: '@Url.Action("Solve", "Challenges")',
             getSourceCodeTemplate: '@Url.Action("GetSourceCodeTemplate", "Challenges")'
+        },
+        user: {
+            getUserById: '@Url.Action("GetUser", "User")'
         }
     }
 
