--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -21,7 +21,8 @@
             getSourceCodeTemplate: '@Url.Action("GetSourceCodeTemplate", "Challenges")'
         },
         user: {
-            getUserById: '@Url.Action("GetUser", "User")'
+            getUserById: '@Url.Action("GetUser", "User")',
+            setAbout: '@Url.Action("SetAbout", "User")'
         }
     }
 
