--- a/Presentation/Web/ClientApp/app/challenge/edit-challenge/answers/answers.component.html
+++ b/Presentation/Web/ClientApp/app/challenge/edit-challenge/answers/answers.component.html
@@ -3,10 +3,7 @@
 <div *ngFor="let answer of answers.controls; let index = index">
     <mdl-textfield-validated class="mdl-cell mdl-cell--10-col"
                    label="Answer {{index+1}}"
-                   type="text"
-                   maxlength="50"
                    [formControl]="answer"
                    floating-label></mdl-textfield-validated>
-    <mdl-button (click)="deleteAnswer(answer)">Delete</mdl-button>
+    <mdl-button *ngIf="canDeleteAnswer()" (click)="deleteAnswer(answer)">Delete</mdl-button>
 </div>
-{{answers.errors | json}}
