--- a/Presentation/Web/ClientApp/app/challenge/edit-challenge/test-cases/test-cases.component.html
+++ b/Presentation/Web/ClientApp/app/challenge/edit-challenge/test-cases/test-cases.component.html
@@ -1,21 +1,33 @@
-<label class="mdl-cell mdl-cell--12-col">Test Cases</label>
+<h4>Test Cases</h4>
 <mdl-button *ngIf="canAddTestCase()" (click)="addTestCase()">Add Test Case</mdl-button>
-<mdl-card mdl-shadow="2" class="mdl-cell mdl-cell--12-col mdl-padded"
+<mdl-card mdl-shadow="3" class="mdl-cell mdl-cell--12-col"
           *ngFor="let testCase of testCases.controls">
-    <mdl-card-supporting-text>
-        <mdl-textfield-validated *ngFor="let inputParameter of testCase.get('inputParameters').controls; let index = index"
-                                 [formControl]="inputParameter"
-                                 label="Input Parameter {{index+1}}"
-                                 floating-label></mdl-textfield-validated>
-        <mdl-textfield-validated *ngFor="let outputParameter of testCase.get('outputParameters').controls; let index = index"
-                                 [formControl]="outputParameter"
-                                 label="Output Parameter {{index+1}}"
-                                 floating-label></mdl-textfield-validated>
+    <mdl-card-supporting-text class="mdl-grid">
+        <div class="mdl-cell mdl-cell--12-col" *ngFor="let inputParameter of testCase.get('inputParameters').controls; let index = index">
+            <mdl-textfield-validated [formControl]="inputParameter"
+                    label="Input Parameter {{index+1}}"
+                    floating-label></mdl-textfield-validated>
+            <button mdl-button mdl-button-type="icon" (click)="deleteInputParameter(testCase, inputParameter)">
+                <mdl-icon>delete</mdl-icon>
+            </button>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col" *ngFor="let outputParameter of testCase.get('outputParameters').controls; let index = index">
+            <mdl-textfield-validated [formControl]="outputParameter"
+                                     label="Output Parameter {{index+1}}"
+                                     floating-label></mdl-textfield-validated>
+            <button mdl-button mdl-button-type="icon" (click)="deleteOutputParameter(testCase, outputParameter)">
+                <mdl-icon>delete</mdl-icon>
+            </button>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <mdl-checkbox style="width: initial;" [formControl]="testCase.get('isPublic')">Public</mdl-checkbox>
+        </div>
+        {{testCase.errors | errorText}}
     </mdl-card-supporting-text>
-    <mdl-checkbox style="width: initial;" [formControl]="testCase.get('isPublic')">Public</mdl-checkbox>
     <mdl-card-actions mdl-card-border>
         <mdl-button *ngIf="canAddInputParameter(testCase)" (click)="addInputParameter(testCase)">Add Input Parameter</mdl-button>
         <mdl-button *ngIf="canAddOutputParameter(testCase)" (click)="addOutputParameter(testCase)">Add Output Parameter</mdl-button>
         <mdl-button *ngIf="canDeleteTestCase()" (click)="deleteTestCase(testCase)">Delete Test Case</mdl-button>
     </mdl-card-actions>
 </mdl-card>
+<div>{{testCases.errors | errorText}}</div>
