--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -18,7 +18,8 @@
             searchChallenges: '@Url.Action("Search", "Challenges")',
             getChallenge: '@Url.Action("GetChallenge", "Challenges")',
             solve: '@Url.Action("Solve", "Challenges")',
-            getSourceCodeTemplate: '@Url.Action("GetSourceCodeTemplate", "Challenges")'
+            getSourceCodeTemplate: '@Url.Action("GetSourceCodeTemplate", "Challenges")',
+            saveChallenge: '@Url.Action("SaveChallenge", "Challenges")'
         },
         user: {
             getUserById: '@Url.Action("GetUser", "User")',
