user can now add challenges

--- a/Presentation/Web/ClientApp/app/challenge/challenge-details/challenge-details.component.html
+++ b/Presentation/Web/ClientApp/app/challenge/challenge-details/challenge-details.component.html
@@ -1,5 +1,5 @@
 <div class="mdl-grid mdl-cell--12-col">
-    <loading-spinner [active]="!challenge"></loading-spinner>
+    <loading-spinner [active]="!challenge || submissionInProgress"></loading-spinner>
 
     <div class="mdl-grid mdl-cell--12-col" [hidden]="!challenge">
         <challenge-description *ngIf="challenge" [challenge]="challenge" class="mdl-cell mdl-cell--12-col mdl-padded"></challenge-description>
@@ -13,7 +13,7 @@
             <markdown *ngIf="challenge" [data]="challenge.condition"></markdown>
         </div>
         <div mdl-shadow="2" class="challenge-answer mdl-cell mdl-cell--6-col">
-            <ace-editor style="height:100%" [options]="editorOptions" [(text)]="answer"></ace-editor>
+            <ace-editor style="height:100%" [options]="editorOptions"></ace-editor>
         </div>
 
         <challenge-actions (submit)="submit()" *ngIf="challenge" [challenge]="challenge" class="mdl-cell mdl-cell--12-col"></challenge-actions>
